--- a/index.html
+++ b/index.html
@@ -1,35 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IR</title>
-    <link rel="stylesheet" href="style.css">
-    
-</head>
-<body>
-    <div class="contenedor-principal">
-        <div class="contenedor-img">
-            <img src="./assets/images/img-fondo.png" alt="Imagen de un ingeniero con un celular">
-        </div>
-        <section class="contenedor-form">
-            <hgroup class="grupo-titulo">
-                <img class="img-logo" src="./assets/images/logo.png" alt="Logo de la empresa">
-                <h1>Inspección de Daños</h1>
-            </hgroup>
-            <form class="form-login" action="">
-                <hgroup class="contenedor-input">
-                    <label>Usuario:</label>
-                    <input type="text" name="usuario">
-                </hgroup>
-                <hgroup class="contenedor-input">
-                    <label>Contraseña:</label>
-                    <input type="password" name="usuario">
-                </hgroup>
-                <label class="fuente-recuperar">Recuperar Acceso</label>
-                <button class="btn-acceso" type="submit">Acceder</button>
-            </form>
-        </section>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
